# hello-agent

./: .gitignore  CLAUDE.md
.claude/: settings.json
.claudian/: claudian-settings.json
.claudian/sessions/: conv-1778340273965-6sr6ygwfd.meta.json
00_Source/hello-agents/: README.md
00_Source/hello-agents/docs/: README.md  _sidebar.md  (+2 more)
00_学习地图/: Hello-Agents 学习地图.md  推荐学习路线.md
01_章节笔记/: Ch01_初识智能体.md  Ch04_智能体经典范式构建.md  Ch08_记忆与检索.md
02_概念卡片/: Agent.md  Memory.md  PEAS.md  RAG.md  Thought-Action-Observation.md  Vector Store.md
03_范式卡片/: Plan-and-Solve.md  ReAct.md  Reflection.md
04_架构卡片/: MemoryTool.md  Memory_Reflection.md  RAGTool.md  ToolExecutor.md
05_实验记录/: Ch01_旅行助手实验记录.md  Ch04_ReAct实验记录.md  Ch08_记忆与检索实验记录.md
05_实验记录/workspace/: ch01_travel_agent.py  ch04_plan_solve_agent.py  ch04_react_agent.py  ch04_reflection_agent.py  ch08_memory_test.py  llm_client.py  memory.py  pyproject.toml
05_实验记录/workspace/ch08/: 11_Q&A_Assistant.py
05_实验记录/workspace/my_hello_agents/: README.md  main.py
05_实验记录/workspace/my_hello_agents/agents/: my_plan_and_solve_agent.py  my_react_agent.py  my_reflection_agent.py  my_simple_agent.py  test_plan_solve_agent.py  test_reflection_agent.py  test_simple_agent.py
05_实验记录/workspace/my_hello_agents/core/: agent.py  config.py  message.py  my_llm.py
05_实验记录/workspace/my_hello_agents/tools/: base.py  my_calculator_tool.py  parameter.py  registry.py  test_my_calculator.py
90_Templates/: 实验记录模板.md  架构卡片模板.md  概念卡片模板.md  章节笔记模板.md  范式卡片模板.md  阶段复盘模板.md  项目实践模板.md
99_System/: index.md  log.md  学习进度.md  实验问题清单.md  问题清单.md
(+16 files in other folders)
