[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-search-results>=2.4.2",
    "hello-agents>=0.2.0",
    "openai>=2.36.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.2",
    "requests>=2.34.0",
    "tavily-python>=0.7.24",
]
